--- a/car/index.html
+++ b/car/index.html
@@ -31,6 +31,12 @@
         background-color: #333;
       }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/vconsole@latest/dist/vconsole.min.js"></script>
+    <script>
+      // VConsole will be exported to `window.VConsole` by default.
+      var vConsole = new window.VConsole();
+    </script>
+    </script>
     <script type="importmap">
       {
         "imports": {
